Refactor code structure for improved readability and maintainability

--- a/catalog.html
+++ b/catalog.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: {{Sedona Project}}</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header class="page-header">
@@ -32,111 +32,113 @@
               <span class="visually-hidden">Избранное</span>
               <span class="icon-button-counter">12</span>
             </a>
-        <a class="button" href="#">Хочу сюда!</a>
+        <a class="button button-secondary" href="#">Хочу сюда!</a>
       </div>
     </nav>
   </header>
 
   <main class="page-main">
-    <h1 class="page-main-header">Гостиницы Седоны</h1>
-    <ul class="breadcrumbs">
-      <li class="breadcrumbs-item">
-        <a class="breadcrumbs-link" href="index.html">
+    <div class="main-header">
+      <h1 class="main-heading">Гостиницы Седоны</h1>
+      <ul class="breadcrumbs">
+        <li class="breadcrumbs-item">
+          <a class="breadcrumbs-link" href="index.html">
             <span class="visually-hidden">Главная страница</span>
           </a>
-      </li>
-      <li class="breadcrumbs-item">
-        <a class="breadcrumbs-link">Гостиницы</a>
-      </li>
-    </ul>
+        </li>
+        <li class="breadcrumbs-item">
+          <a class="breadcrumbs-link">Гостиницы</a>
+        </li>
+      </ul>
 
-    <section class="filter">
-      <h2 class="visually-hidden">Фильтр списка гостиниц</h2>
+      <section class="filter">
+        <h2 class="visually-hidden">Фильтр списка гостиниц</h2>
 
-      <form class="filter-form" action="https://echo.htmlacademy.ru/" method="get">
-        <fieldset class="filter-fieldset">
-          <legend class="filter-title">Инфраструктура:</legend>
+        <form class="filter-form" action="https://echo.htmlacademy.ru/" method="get">
+          <fieldset class="filter-fieldset">
+            <legend class="filter-title">Инфраструктура:</legend>
 
-          <ul class="filter-list">
-            <li class="filter-item">
-              <label class="control">
+            <ul class="filter-list">
+              <li class="filter-item">
+                <label class="control">
                   <input class="control-input" type="checkbox" name="infrastructure" value="pool" checked>
                   <span class="control-lead">Бассейн</span>
                 </label>
-            </li>
-            <li class="filter-item">
-              <label class="control">
+              </li>
+              <li class="filter-item">
+                <label class="control">
                   <input class="control-input" type="checkbox" name="infrastructure" value="parking" checked>
                   <span class="control-lead">Парковка</span>
                 </label>
-            </li>
-            <li class="filter-item">
-              <label class="control">
+              </li>
+              <li class="filter-item">
+                <label class="control">
                   <input class="control-input" type="checkbox" name="infrastructure" value="wi-fi">
                   <span class="control-lead">Wi-Fi</span>
                 </label>
-            </li>
-          </ul>
-        </fieldset>
+              </li>
+            </ul>
+          </fieldset>
 
-        <fieldset class="filter-fieldset">
-          <legend class="filter-title">Тип жилья:</legend>
+          <fieldset class="filter-fieldset">
+            <legend class="filter-title">Тип жилья:</legend>
 
-          <ul class="filter-list">
-            <li class="filter-item">
-              <label class="control">
+            <ul class="filter-list">
+              <li class="filter-item">
+                <label class="control">
                   <input class="control-input" type="radio" name="apartment-type" value="hotel" checked>
                   <span class="control-lead">Гостиница</span>
                 </label>
-            </li>
-            <li class="filter-item">
-              <label class="control">
+              </li>
+              <li class="filter-item">
+                <label class="control">
                   <input class="control-input" type="radio" name="apartment-type" value="motel">
                   <span class="control-lead">Мотель</span>
                 </label>
-            </li>
-            <li class="filter-item">
-              <label class="control">
+              </li>
+              <li class="filter-item">
+                <label class="control">
                   <input class="control-input" type="radio" name="apartment-type" value="apartament">
                   <span class="control-lead">Апартаменты</span>
                 </label>
-            </li>
-          </ul>
-        </fieldset>
+              </li>
+            </ul>
+          </fieldset>
 
-        <fieldset class="filter-fieldset">
-          <legend class="filter-title">Стоимость, ₽:</legend>
+          <fieldset class="filter-fieldset">
+            <legend class="filter-title">Стоимость, ₽:</legend>
 
-          <div class="range">
-            <label class="range-field">
+            <div class="range">
+              <label class="range-field">
                 <span class="range-title">от</span>
                 <input class="range-input" type="number" name="price-from" value="0" min="0" max="10000" step="100">
               </label>
 
-            <label class="range-field">
+              <label class="range-field">
                 <span class="range-title">до</span>
                 <input class="range-input" type="number" name="price-to" value="9000" min="0" max="10000" step="100">
               </label>
 
-            <div class="range-slider slider">
-              <div class="slider-bar">
-                <button class="slider-thumb" type="button">
+              <div class="range-slider slider">
+                <div class="slider-bar">
+                  <button class="slider-thumb" type="button">
                     <span class="visually-hidden">Ручка минимальной цены</span>
                   </button>
-                <button class="slider-thumb" type="button">
+                  <button class="slider-thumb" type="button">
                     <span class="visually-hidden">Ручка максимальной цены</span>
                   </button>
+                </div>
               </div>
             </div>
-          </div>
-        </fieldset>
+          </fieldset>
 
-        <div class="filter-buttons">
-          <button class="button" type="submit">Применить</button>
-          <button class="button" type="reset">Сбросить</button>
-        </div>
-      </form>
-    </section>
+          <div class="filter-buttons">
+            <button class="button" type="submit">Применить</button>
+            <button class="filter-reset" type="reset">Сбросить</button>
+          </div>
+        </form>
+      </section>
+    </div>
 
     <section class="catalog">
       <h2 class="visually-hidden">Результаты поиска</h2>
@@ -196,7 +198,7 @@
           <span class="card-description-defenition">От 4000 ₽</span>
         </p>
 
-        <a class="button" href="#">Подробнее</a>
+        <a class="button button-secondary" href="#">Подробнее</a>
         <a class="button" href="#">В избранное</a>
 
         <p class="star star-four">
@@ -219,7 +221,7 @@
           <span class="card-description-defenition">От 3000 ₽</span>
         </p>
 
-        <a class="button" href="#">Подробнее</a>
+        <a class="button button-secondary" href="#">Подробнее</a>
         <a class="button" href="#">В избранное</a>
 
         <p class="star star-three">
@@ -242,7 +244,7 @@
           <span class="card-description-defenition">От 2000 ₽</span>
         </p>
 
-        <a class="button" href="#">Подробнее</a>
+        <a class="button button-secondary" href="#">Подробнее</a>
         <a class="button" href="#">В избранном</a>
 
         <p class="star star-two">
@@ -265,7 +267,7 @@
           <span class="card-description-defenition">От 3000 ₽</span>
         </p>
 
-        <a class="button" href="#">Подробнее</a>
+        <a class="button button-secondary" href="#">Подробнее</a>
         <a class="button" href="#">В избранное</a>
 
         <p class="star star-two">
@@ -275,7 +277,7 @@
       </article>
 
       <div class="pagination">
-        <button class="button" type="button">Загрузить ещё</button>
+        <button class="button button-large" type="button">Загрузить ещё</button>
 
         <h3 class="visually-hidden">Список страниц</h3>
         <ul class="pagination-list">
@@ -331,7 +333,7 @@
 
       <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
         <label class="subscribe-field field">
-          <span class="visually-hidden">Введите ваш email</span>
+          <span class="visually-hidden">Ваш e-mail</span>
           <input class="field-input" type="email" name="email" placeholder="Ваш e-mail" required>
           </label>
         <button class="subscribe-button button" type="submit">Подписаться</button>
