--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Academy: {{Sedona Project}}</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="preload" href="fonts/ptsans-400.woff2" as="font" type="font/woff2"
     crossorigin="anonymous">
   <link rel="preload" href="fonts/ptsans-700.woff2" as="font" type="font/woff2"
@@ -53,12 +53,12 @@
       </p>
 
       <ol class="advantages-list">
-        <li class="advantages-item">
+        <li class="advantages-item advantages-item-large">
           <h3 class="advantages-title">Настоящий городок</h3>
           <p class="advantages-text">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
           <img class="advantages-img" src="img/content/real-city.jpg" width="800" height="384" alt=" Фото города Седона с заведениями">
 
-          <ul class="advantages-list">
+          <ul class="advantages-list advantages-list-inner">
             <li class="advantages-item">
               <h4 class="advantages-title">Жильё</h4>
               <p class="advantages-text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
@@ -76,7 +76,7 @@
           </ul>
         </li>
 
-        <li class="advantages-item">
+        <li class="advantages-item advantages-item-large">
           <h3 class="advantages-title">Там есть мост дьявола</h3>
           <p class="advantages-text">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
           <img class="advantages-img" src="img/content/devil-bridge.jpg" width="800" height="384" alt=" Фото моста дьявола: природного каменного моста между скалами">
@@ -105,10 +105,10 @@
       <p class="section-title">Заинтересовались?</p>
       <p class="section-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие
         предложения гостиниц в Седоне</p>
-      <a class="search-button button" href="#">Поиск гостинницы в Седоне</a>
+      <a class="search-button button button-secondary button-large" href="#">Поиск гостинницы в Седоне</a>
     </section>
 
-    <section class="subscribe">
+    <section class="subscribe subscribe-primary">
       <h2 class="section-title">Подпишитесь на рассылку</h2>
       <p class="section-description">Только полезная информация и никакого спама, честное
         бойскаутское!</p>
@@ -118,7 +118,7 @@
           <span class="visually-hidden">Введите ваш email</span>
           <input class="field-input" type="email" name="email" placeholder="Ваш e-mail" required>
           </label>
-        <button class="subscribe-button button" type="submit">Подписаться</button>
+        <button class="subscribe-button button button-large" type="submit">Подписаться</button>
       </form>
     </section>
   </main>
