Fix typos in titles and improve styles for consistency

--- a/catalog.html
+++ b/catalog.html
@@ -98,7 +98,7 @@
               </li>
               <li class="filter-item">
                 <label class="control">
-                  <input class="control-input" type="radio" name="apartment-type" value="apartament">
+                  <input class="control-input" type="radio" name="apartment-type" value="apartment">
                   <span class="control-lead">Апартаменты</span>
                 </label>
               </li>
@@ -142,7 +142,7 @@
 
     <section class="catalog">
       <h2 class="visually-hidden">Результаты поиска</h2>
-      <p class="section">Найдено гостиниц: 38</p>
+      <p class="section-title">Найдено гостиниц: 38</p>
 
       <h3 class="visually-hidden">Сортировка и отображение</h3>
       <details class="select">
