--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <p class="section-title">Заинтересовались?</p>
       <p class="section-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие
         предложения гостиниц в Седоне</p>
-      <a class="search-button button button-secondary button-large" href="#">Поиск гостинницы в Седоне</a>
+      <a class="search-button button button-secondary button-large" href="#">Поиск гостиницы в Седоне</a>
     </section>
 
     <section class="subscribe subscribe-primary">
